syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "MapMarkPoint.proto";

// CmdId: 3208
// EnetChannelId: 0
// EnetIsReliable: true
// IsAllowClient: true
message MarkMapReq {
	Operation op = 15;
	MapMarkPoint old = 10;
	MapMarkPoint mark = 4;

	enum Operation {
		OPERATION_ADD = 0;
		OPERATION_MOD = 1;
		OPERATION_DEL = 2;
		OPERATION_GET = 3;
	}
}
